# quake2

./: .gitignore  module.mk  quake2.sln  quake2.vcxproj  quake2.vcxproj.filters
binaries/: example.mk
client/: cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_inv.c  cl_main.c  cl_newfx.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  console.c  le_physics.c  menu.c  module.mk  qmenu.c  ref.h  snd_dma.c  snd_loc.h  snd_mem.c  snd_mix.c  vid_menu.c
configs/: default.cfg
ctf/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_ctf.h  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  m_move.c  m_player.h  module.mk  p_client.c  p_hud.c  p_menu.c  p_menu.h  p_trail.c  p_view.c  p_weapon.c
emscripten/: build_instructions.txt  example.mk  quake2.html
foreign/: module.mk
foreign/humblenet/: CMakeLists.txt  humblepeer_generated.h  module.mk
foreign/humblenet/webrtc/: module.mk
foreign/humblenet/webrtc/Microstack/: module.mk  stdafx.cpp
foreign/humblenet/webrtc/core/: module.mk
game/: g_ai.c  g_chase.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_save.c  g_spawn.c  g_target.c  g_utils.c  g_weapon.c  game.h  game.vcxproj  game.vcxproj.filters  m_boss2.c  m_boss31.c  m_boss32.c  m_infantry.c  m_medic.c  m_move.c  m_tank.c  module.mk  p_hud.c  q_shared.c  q_shared.h
linux/: al_linux.c  glw.h  module.mk  net_afl.cpp  net_udp.c  q_shlinux.c  qal_linux.c  snd_linux.c  sys_linux.c  vid_so.c
mingw/: example.mk
qcommon/: cmd.c  cmodel.c  common.c  crypt.h  (+11 more)
(+86 files in other folders)
